# GPUComputing

./: .gitignore
Assignment 1/Assignment1/: Charts.ods
Assignment 1/Assignment1/Assignment1/: CAssignment1.cpp  CMatrixRotateTask.cpp  CSimpleArraysTask.cpp  MatrixRot.cl  VectorAdd.cl
Assignment 1/Assignment1/Assignment_Blasen_Simon/Assignment1/: CAssignment1.cpp  CAssignment1.h  CMakeLists.txt  CMatrixRotateTask.h  CSimpleArraysTask.h  main.cpp
Assignment 1/Assignment1/Assignment_Blasen_Simon/Common/: CAssignmentBase.h
Assignment 1/Assignment1/Common/: CAssignmentBase.cpp  CLUtil.cpp
Assignment 2/Assignment2/Assignment2/: CAssignment2.cpp  CAssignment2.h  CMakeLists.txt  CReductionTask.cpp  CReductionTask.h  CScanTask.cpp  CScanTask.h  Reduction.cl  Scan.cl  main.cpp
Assignment 2/Assignment2/Common/: CLUtil.cpp  CLUtil.h
Assignment 3/Assignment3/: Charts.ods
Assignment 3/Assignment3/Assignment3/: CAssignment3.cpp  CAssignment3.h  CConvolution3x3Task.cpp  CConvolution3x3Task.h  CConvolutionBilateralTask.cpp  CConvolutionBilateralTask.h  CConvolutionSeparableTask.cpp  CConvolutionSeparableTask.h  CConvolutionTaskBase.cpp  CConvolutionTaskBase.h  CHistogramTask.cpp  CHistogramTask.h  CMakeLists.txt  Convolution3x3.cl  ConvolutionBilateral.cl  ConvolutionSeparable.cl  Pfm.cpp  Pfm.h  histogram.cl  main.cpp
Assignment 3/Assignment3/Assignment3/Images/: CPUDiscontinuities.pfm  GPUDiscontinuities.pfm
Assignment 3/Assignment3/Common/: CAssignmentBase.cpp
Assignment 4/Assignment4/Assignment4/: CAssignment4.cpp  CClothSimulationTask.cpp  CClothSimulationTask.h  CGLTexture.cpp  CMakeLists.txt  CParticleSystemTask.cpp  CParticleSystemTask.h  CTriMesh.h  GLCommon.cpp  GLCommon.h  HLSL.cpp  HLSL.h  HLSLEx.h  ParticleSystem.cl  Scan.cl  clothsim.cl  main.cpp  meshtextured.frag  meshtextured.vert
Assignment 5/: Procedural generation of continuous roads on heightmaps.odt
Assignment 5/Assignment5/Assignment5/: CAssignment4.cpp  CAssignment4.h  CGLTexture.h  CMakeLists.txt  CParticleSystemTask.cpp  CParticleSystemTask.h  CRainSimulation.cpp  CRainSimulation.h  CTriMesh.cpp  Scan.cl  TerrainSim.cl  clothsim.cl  forcefield.frag  forcefield.vert  mesh.frag  mesh.vert  meshtextured.frag  meshtextured.vert  particles.frag  particles.vert
Assignment 5/Assignment5/Assignment5.build_OLD/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assignment.vcxproj  Assignment.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CRainSimulation.cpp  CRainSimulation.h  GPUComputing.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+91 files in other folders)
